--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,4 @@
-{
-  "singleQuote": true,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": false,
-  "trailingComma": "all",
-  "printWidth": 120,
-  "endOfLine":"auto",
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "bracketSameLine": false
+module.exports = {
+  singleQuote:true,
+  semi: false
 }
