--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
+    "balm-ui": "^9.40.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "vue": "^3.2.16",
